compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_bin_op_usage.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = 1\n  let y = x + 1\n}\n    "
---

import list

fn main() {
  
  let y = 1 + 1
}
    
