compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_func_arg_usage.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = [1,2,3]\n  let result = list.reverse(x)\n}\n    "
---

import list

fn main() {
  
  let result = list.reverse([1, 2, 3])
}
    
