compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__inline_var_action__inline_local_var_into_expression_let.snap
---
source: compiler-core/src/language_server/tests/inline_var_action.rs
expression: "\nimport list\n\nfn main() {\n  let x = [1, 2, 3]\n  list.reverse(x)\n}\n    "
---

import list

fn main() {
  
  list.reverse([1, 2, 3])
}
    
